the second version of my tic tac toe game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
+<body class="game">
     <h1  class="animated swing infinite">Tic Tac Toe </h1> 
       <h3 id="turn"> </h3> 
 
@@ -33,13 +33,16 @@
      </div>
 
     </div> 
-          <button id ='remove'class="reset-button"> Start a new game</button>
-          <audio id ='myWinner'src="ta-da.mp3" type="audio/mpeg"></audio>
+          <button id ='remove'class="reset-button"> New Game</button>
+          <audio id ='myWinner'src="cheer.mp3" type="audio/mpeg"></audio>
 
      <!-- Scripts -->
      <script src="https://code.jquery.com/jquery-3.3.1.js"></script> <!-- linking to jQuery file -->
      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
      <script src="main.js"></script> <!-- linking to exercise file -->
-     <!-- End Scripts -->
+     <!-- End Scripts --> 
+     <footer> 
+         <p> © 2019 Tic Tac Toe, KSA</p>
+     </footer>
 </body>
 </html>
